exercício interface funcional - Function - terminado e testado